feat: add Stripe secret key to environment variables and initialize Stripe in app.js

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="mysql://proyectousuario:proyectousuario@localhost:3306/proyecto"
 PORT=3000
+STRIPE_SECRET_KEY=sk_test_tuClaveAqui
 JWT_SECRET=supersecreto123
