refactor: clean up backend and remove unused code
- Remove old Sequelize models (company, person, post, courses, etc.)
- Delete unused OpenAI integration and routes
- Remove React component from backend (searchBar.jsx)
- Clean up database configuration
- Remove docker-compose.yml
- Update dependencies in package.json
- Simplify admin routes and middleware

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DATABASE_URL="mysql://prisma_user:prisma1020@localhost:3306/Jobee"
+DATABASE_URL="mysql://proyectousuario:proyectousuario@localhost:3306/proyecto"
 PORT=3000
 STRIPE_SECRET_KEY=sk_live_xxxxxx
 JWT_SECRET=secreto1020;
 EMIAL_USER= ejemplo@gmail.com;
 EMAIL_PASS= password;
-
